--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ h3{
     font-size: 15px;
     color: #777;
 }
-.project-box::after{
+.project-box::after, .contact-info::after{
     content: "";
     position: absolute;
     bottom: -100%;
@@ -347,7 +347,7 @@ h3{
     transition: .4s;
     z-index: 1;
 }
-.project-box:hover.project-box::after{
+.project-box:hover.project-box::after, .contact-info:hover.contact-info::after{
    bottom: 0;
 }
 .project-box:hover.project-box i,
@@ -355,6 +355,120 @@ h3{
 .project-box:hover.project-box>label{
     color: var(--color-white);
     z-index: 2;
+}
+.contact-info{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 30px;
+    width: 100%;
+    height: 315px;
+    background: var(--second-color);
+    border-radius: 10px;
+    box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
+    overflow: hidden;
+}
+.contact-info >h2{
+    color: var(--color-white);
+    margin-bottom: 20px;
+
+}
+.contact-info>p{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: var(--color-white);
+    margin-block: 5px;
+}
+.contact-info p>i{
+    font-size: 18px;
+}
+.contact-info::after{
+    background: var(--color-white);
+}
+.contact-info:hover.contact-info h2,
+.contact-info:hover.contact-info p,
+.contact-info:hover.contact-info i{
+    color: #777;
+    z-index: 2;
+}
+.form-control{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+.form-inputs{
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+.input-field{
+    width: 50%;
+    height: 55px;
+    background: transparent;
+    border: 2px solid #AAA;
+    border-radius: 10px;
+    padding-inline: 20px;
+    outline: none;
+}
+textarea{
+    width: 100%;
+    height: 250px;
+    background: transparent;
+    border: 2px solid #aaa;
+    border-radius: 10px;
+    padding: 15px 20px;
+    outline: none;
+    resize: none;
+}
+.form-button>.btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--second-color);
+    color: var(--color-white);
+}
+.form-button>.btn:hover{
+    background: #00b5e7;
+}
+.form-button i{
+    font-size: 18px;   
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 30px;
+    background: #f8f8f8;
+    padding-block: 40px 60px;
+}
+.top-footer p{
+    font-size: 25px;
+    font-weight: 600;
+}
+.middle-footer .footer-menu{
+    display: flex;
+}
+.footer_menu_list{
+    list-style: none;
+}
+.footer_menu_list a{
+    text-decoration: none;
+    color: var(--text-color-second);
+    font-weight: 500;
+    margin-inline: 20px;
+}
+.footer-social-icons{
+    display: flex;
+    gap: 30px;
+}
+.bottom-footer{
+    font-size: 14px;
+    margin-top: 10px;
 }
 
 
@@ -425,6 +539,15 @@ h3{
     }
     .nav_menu_list{
         flex-direction: column;
+        list-style: none;
+        padding: 10px 10px;
+        justify-content: center;
+        align-items: center;
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(20px);
+        
+        
+        
     }
     .nav-menu-btn{
         display: flex;
@@ -457,4 +580,39 @@ h3{
         width: 150px;
         height: 150px;
     }
+    .row{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 50px;
+    }
+    .col{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+    }
+    .about-info, .contact-info{
+        width: 100%;
+    }
+    .project-container{
+        justify-content: center;
+    }
+    .project-box{
+        width: 80%;
+    }
+}
+@media only screen and (max-width:540px){
+   .featured-name{
+    font-size: 40px;
+   } 
+   .project-box{
+    width: 100%;
+   }
+   .form-inputs{
+    flex-direction: column;
+   }
+   .input-field{
+    width: 100%;
+   }
 }
